# Authentication

./: build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/cn/dacas/authentication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ALog.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInfo1.cpp  DeviceInfo1.h  MediatedSM2.cpp  MediatedSM2.h  MediatedSM2Client.cpp  MediatedSM2Client.h  MediatedSM2Service.cpp  MediatedSM2Service.h  MediatedSM2Stub.cpp  MediatedSM2Stub.h  Message.h  OpResultCode.h  def.h  native-lib.cpp  security.h
app/src/main/cpp/3rd/: EllipticCurve.cpp  EllipticCurve.h  Mpi.cpp  Mpi.h  SMS4.cpp  SMS4.h  sm3hash.cpp  sm3hash.h
app/src/main/cpp/3rd/qr/: config.h  mask.c  qrencode.c  qrinput.c  rscode.c  split.c
app/src/main/java/cn/dacas/authentication/model/: NativeCode.java
app/src/main/java/cn/dacas/authentication/ui/: ConfirmActivity.java  ErrorActivity.java  LoginActivity.java  MainActivity.java
app/src/main/java/cn/dacas/authentication/util/: DialogUtil.java  HttpUtil.java  SharedPreferencesHelper.java
app/src/main/java/cn/dacas/authentication/zxing/camera/: AutoFocusCallback.java  CameraConfigurationManager.java  CameraManager.java  FlashlightManager.java  PlanarYUVLuminanceSource.java  PreviewCallback.java
app/src/main/java/cn/dacas/authentication/zxing/decoding/: CaptureActivityHandler.java  DecodeFormatManager.java  DecodeHandler.java  DecodeThread.java  FinishListener.java  InactivityTimer.java  Intents.java
app/src/main/java/cn/dacas/authentication/zxing/ui/: MipcaActivityCapture.java
app/src/main/java/cn/dacas/authentication/zxing/view/: ViewfinderResultPointCallback.java  ViewfinderView.java
app/src/main/res/layout/: activity_capture.xml  activity_confirm.xml  activity_error.xml  activity_login.xml  activity_main.xml
app/src/main/res/values/: arrays_company.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/cn/dacas/authentication/: ExampleUnitTest.java
